<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/room_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/room_name"

            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/room_food"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/is_food"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/room_money"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="USD193.86"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_one"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/room_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/room_cancel"
            android:textSize="14sp"
            android:textColor="@color/main_color"/>

        <TextView
            android:id="@+id/room_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:text="@string/room_booking"
            android:textSize="16sp"
            android:textColor="@color/main_color"/>
    </LinearLayout>
</RelativeLayout>