<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background_grey"
    tools:context=".view.activity.HotelActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/hotel_infor_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:theme="@style/toobar_back_color"
        app:titleTextAppearance="@style/Toolbar.TitleText">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/hotel_infor_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hotel_infor_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <!--酒店的姓名-->
                    <TextView
                        android:id="@+id/hotel_infor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/hotel_address"
                            android:textSize="16sp"/>

                        <!--酒店的地址-->
                        <TextView
                            android:id="@+id/hotel_infor_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:text="如家商务会所"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel_phone"
                            android:textSize="16sp"/>

                        <!--酒店的电话-->
                        <TextView
                            android:id="@+id/hotel_infor_iphone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:text="如家商务会所"
                            android:textSize="16sp"/>

                    </LinearLayout>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/hotel_fix"
                            android:textSize="16sp" />

                        <!--酒店的传真-->
                        <TextView
                            android:id="@+id/hotel_infor_fix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:text="如家商务会所"
                            android:textSize="16sp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/star_one"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@drawable/star"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/star_two"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@drawable/star"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/star_three"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@drawable/star"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/star_four"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@drawable/star"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/star_five"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@drawable/star"
                            android:visibility="gone"/>

                        <!--酒店的星级-->
                        <TextView
                            android:id="@+id/hotel_infor_stars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:textSize="16sp"
                            android:text="@string/no_result"/>
                    </LinearLayout>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>

                    <com.baidu.mapapi.map.MapView
                        android:id="@+id/hotel_infor_map"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp">

                    </com.baidu.mapapi.map.MapView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:id="@+id/smoking_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="3dp"
                        android:orientation="vertical"
                        android:visibility="visible">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/no_smoking"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/no_smoking"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/food_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="3dp"
                        android:orientation="vertical"
                        android:visibility="visible">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="23dp"
                            android:src="@drawable/breakfast"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/have_breakfast"/>

                    </LinearLayout>
                    
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/hotel_infor_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/hotel_intro"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:text="@string/room_type"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="70dp"
                        android:text="@string/room_food"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="50dp"
                        android:text="@string/room_money"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/room_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/no_more_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/hotel_infor_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>